# scientific-writing

./: .gitignore  README.md  five-layer-paradigm.md  ftqc-solo-contribution.md  haskell-qec-research-prompt.md  progressive-dependent-types.md  review-1.md  review-2.md  review-3.md  review-4-manuscript-revision.md  review-4.md
circuit-presheaf/: REPORT.md  build.sh  circuit-presheaf.ipkg
circuit-presheaf/scripts/: cdcl_width.py  genuine_unsat_n4d3s4.txt  genuine_unsat_safe.txt  n4_unsat.txt  n5_all_lifted_s4.csv  n5_lifted_s5.csv  n5_lifted_test.csv  n5_lifted_v2.csv  n5_random_200.csv  n5_random_v2.csv  n5_scan.py  n5_structured.csv  n5_structured_v2.csv  ns_degree.py  ns_degree_gf2.py  ns_from_csp.py  resolution_width.py  width_scaling.py
circuit-presheaf/src/: Main.idr
circuit-presheaf/src/Algebra/: M2Gen.idr  M2Parse.idr  NSDriver.idr
circuit-presheaf/src/Analysis/: AffineRestriction.idr  CompatCSP.idr  Entropy.idr  GraphTopology.idr  RestrictionImage.idr  SubCube.idr  VerifiedStats.idr
circuit-presheaf/src/Circuit/: Canonical.idr  Enumerate.idr  Formula.idr  Restriction.idr
circuit-presheaf/src/Verified/: CSP.idr  Exhaustive.idr  Formula.idr  ProofSearch.idr  Solver.idr  SubCube.idr
circuit-presheaf/wiki/: Analysis.md  Boolean-Formulas.md  Build-Order.md  CLI-Reference.md  Enumeration.md  Home.md  M2-Pipeline-Report.md  Macaulay2-Integration.md  Performance.md  Restriction.md  SubCubes-and-CSP.md  Test-Vectors.md
pnp-research/: CLAUDE.md  post_retraction_roadmap.md  revised_status_summary.md
pnp-research/archive/: Sheaf_Framework_Schematic.html  google-gemini.md  p-vs-np-sheaf-framework.md  program_summary_dag.html  proof_dependency_dag.html  roadmap_visual_dag.html
pnp-research/paper/: bibliography_and_conclusion.md  d3_complete_findings.md  expansion_analysis.md  final_manuscript_sections.md  growth_mechanism.md  n4_csp_analysis.md  neff_theory.md  od_witness_analysis.md  paper_outline_ccc.md  restriction_audit_findings.md  section_5_6_anticoncentration.md  structural_anatomy_paper.md  universe_scaling_analysis.md
pnp-research/research/: A_Categorical_Sheaf_Framework_for_Meta-Complexity.md  Cohomological_Dimension_Lower_Bound.md  Decoupling_Property_Strategy.md  Executive_Summary_Sheaf_Framework_P_vs_NP.md  Information_Loss_on_Cycles.md  Local-to-global structure in circuit complexity recent frontiers.md  P_neq_NP_Conditional_Proof_v2.md  Project_Archive_Sheaf_Framework_P_vs_NP.md  Sensitivity_Proof_Attempt.md  Technical_Foundations_for_Polymorphisms__Mergeability__and_Non-Locality_in_the_MCSP_Presheaf.md  Three_Approaches_to_PNP_from_n4.md  refocusing-pnp-strategy.md  subcube_lifting_critique.md
pnp-research/scripts/: chatgpt.py  parse_chat.py
pnp-research/state/: chatgpt_response.md  current_problem.md  session_log.md
qec-cat/: .gitignore  qec-cat.cabal
qec-cat/app/: LDPCCatValidation.hs  ResourceComparison.hs  SurfaceThreshold.hs
qec-cat/bench/: Main.hs
qec-cat/docs/: deviations.md  ldpc-cat-validation-report.md  paper.md  qec-cat-implementation-specification.md  qec-cat-rnd.md  qex-cat2.md  resource-estimation-report.md  surface-threshold-report.md
qec-cat/results/: resource-comparison.json
qec-cat/src/QEC/: Export.hs  GF2.hs  Noise.hs  Notebook.hs  Resource.hs  Simulation.hs  Symplectic.hs
qec-cat/src/QEC/Code/: CSS.hs  LDPCCat.hs  Repetition.hs  Surface.hs
qec-cat/src/QEC/Decoder/: BP.hs  OSD.hs
qec-cat/src/QEC/GF2/: Gauss.hs  Matrix.hs
qec-cat/src/QEC/Noise/: Biased.hs  CatQubit.hs  Depolarizing.hs
qec-cat/src/QEC/Notebook/: Renderable.hs
qec-cat/src/QEC/Resource/: Algorithm.hs  Layout.hs  MagicState.hs
qec-cat/src/QEC/Stabilizer/: Tableau.hs
qec-cat/test/: Main.hs
qec-cat/test/QEC/Code/CSS/: Test.hs
qec-cat/test/QEC/Code/LDPCCat/: Test.hs
qec-cat/test/QEC/Code/Surface/: Test.hs
qec-cat/test/QEC/Decoder/BP/: Test.hs
qec-cat/test/QEC/Decoder/OSD/: Test.hs
qec-cat/test/QEC/Export/: Test.hs
qec-cat/test/QEC/GF2/: Test.hs
qec-cat/test/QEC/GF2/Gauss/: Test.hs
qec-cat/test/QEC/GF2/Matrix/: Test.hs
qec-cat/test/QEC/Noise/: Test.hs
qec-cat/test/QEC/Resource/: Test.hs
qec-cat/test/QEC/Simulation/: Test.hs
qec-cat/test/QEC/Stabilizer/Tableau/: Test.hs
qec-cat/test/QEC/Symplectic/: Test.hs
qec-notebook/: .gitignore  README.md  cabal.project  qec-notebook.cabal  test-ws.js
qec-notebook/docs/: PROGRESS.md  qec-notebook-spec.md  testing.md
qec-notebook/server/: Eval.hs  Main.hs  Protocol.hs  Render.hs  Session.hs  Stream.hs
qec-notebook/static/: index.html  notebook.js  renderers.js  style.css
qec-notebook/test/: Main.hs
qec-notebook/test/Test/Integration/: WebSocket.hs
qec-notebook/test/Test/Unit/: Eval.hs  Protocol.hs
