cabal-version: 3.0
name:          qec-cat
version:       0.1.0.0
synopsis:      Quantum error correction resource estimation for biased-noise cat qubit architectures
license:       BSD-3-Clause
build-type:    Simple

library
  exposed-modules:
    QEC.GF2
    QEC.GF2.Matrix
    QEC.GF2.Gauss
    QEC.Symplectic
    QEC.Code.CSS
    QEC.Code.Repetition
    QEC.Code.Surface
    QEC.Code.LDPCCat
    QEC.Noise
    QEC.Noise.Depolarizing
    QEC.Noise.Biased
    QEC.Noise.CatQubit
    QEC.Decoder.BP
    QEC.Decoder.OSD
    QEC.Stabilizer.Tableau
    QEC.Simulation
    QEC.Resource
    QEC.Resource.Algorithm
    QEC.Resource.MagicState
    QEC.Resource.Layout
    QEC.Export
    QEC.Notebook
    QEC.Notebook.Renderable
  hs-source-dirs: src
  build-depends:
    base          >= 4.18 && < 5,
    vector        >= 0.13,
    primitive     >= 0.8,
    deepseq       >= 1.4,
    containers    >= 0.6,
    mtl           >= 2.3,
    random        >= 1.2,
    splitmix      >= 0.1,
    parallel      >= 3.2,
    aeson         >= 2.1,
    bytestring    >= 0.11,
    cassava       >= 0.5,
    text          >= 2.0,
    hashable      >= 1.4
  default-language: GHC2021
  default-extensions:
    StrictData
    DerivingStrategies
    GeneralizedNewtypeDeriving
    ScopedTypeVariables
    BangPatterns
  ghc-options: -O2 -Wall

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules:
    QEC.GF2.Test
    QEC.GF2.Matrix.Test
    QEC.GF2.Gauss.Test
    QEC.Symplectic.Test
    QEC.Code.CSS.Test
    QEC.Code.Surface.Test
    QEC.Code.LDPCCat.Test
    QEC.Noise.Test
    QEC.Decoder.BP.Test
    QEC.Decoder.OSD.Test
    QEC.Stabilizer.Tableau.Test
    QEC.Simulation.Test
    QEC.Resource.Test
    QEC.Export.Test
  build-depends:
    base,
    qec-cat,
    tasty          >= 1.4,
    tasty-quickcheck >= 0.10,
    tasty-hunit    >= 0.10,
    QuickCheck     >= 2.14,
    vector,
    random         >= 1.2,
    aeson          >= 2.1,
    bytestring     >= 0.11
  default-language: GHC2021
  default-extensions:
    StrictData
    DerivingStrategies
    ScopedTypeVariables
    BangPatterns

executable ldpc-cat-validation
  main-is: LDPCCatValidation.hs
  hs-source-dirs: app
  build-depends:
    base,
    qec-cat
  default-language: GHC2021
  ghc-options: -O2 -Wall -threaded -rtsopts "-with-rtsopts=-N"

executable resource-comparison
  main-is: ResourceComparison.hs
  hs-source-dirs: app
  build-depends:
    base,
    qec-cat,
    bytestring >= 0.11,
    directory  >= 1.3
  default-language: GHC2021
  ghc-options: -O2 -Wall

executable surface-threshold
  main-is: SurfaceThreshold.hs
  hs-source-dirs: app
  build-depends:
    base,
    qec-cat
  default-language: GHC2021
  ghc-options: -O2 -Wall -threaded -rtsopts "-with-rtsopts=-N"

benchmark bench
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: bench
  build-depends:
    base,
    qec-cat,
    tasty-bench    >= 0.3,
    vector,
    deepseq
  default-language: GHC2021
